--- a/modalidades/pilates.html
+++ b/modalidades/pilates.html
@@ -30,7 +30,7 @@
                             <a class="nav-link active" aria-current="Pagina Inicial" href="../index.html">HOME</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./academia.html">A ACADEMIA</a>
+                            <a class="nav-link" href="../pages/academia.html">A ACADEMIA</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -57,13 +57,13 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./clinica.html">A CLÍNICA</a>
+                            <a class="nav-link" href="../pages/clinica.html">A CLÍNICA</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/promocoes.html">PROMOÇÕES</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./contatoendereco.html">CONTATO & ENDEREÇO</a>
+                            <a class="nav-link" href="../pages/contatoendereco.html">CONTATO & ENDEREÇO</a>
                         </li>
                     </ul>
                 </div>
@@ -74,41 +74,53 @@
     <main class="aacademia">
         <div class="container-fluid">
             <div class="container accont">
-                <h1>A Clínica – AquaFisio Fitness</h1>
-
-                <p>Oferecemos um espaço estruturado e planejado para realização de todos os tipos de tratamentos em
-                    Fisioterapia, Hidroterapia, Natação para Bebês, RPG, Drenagem Linfática, Acupuntura e
-                    Hidroginástica.</p>
-
-                <p>Tratamentos de reabilitação fisioterapêutica de contusões, pós fraturas, entorses, luxações, e por
-                    meio de equipamentos modernos proporcionar a analgesia no alívio da dor, tratamento do processo
-                    inflamatório e melhoria na circulação, alongamentos e fortalecimento muscular na busca de
-                    recuperação dos movimentos, e reequilíbrio muscular e postural.</p>
+                <h1>Pilates – AquaFisio Fitness</h1>
+                <p>O Pilates pode ser praticado pelos mais diferentes grupos, desde que sejam respeitadas as diferenças individuais e princípios de treinamento desportivo.</p>
             </div>
         </div>
     </main>
-
-    <section class="sec_modalidade">
-        <div class="container">
-            <div class="mod_container">
-                <p>NOSSOS TRATAMENTOS:</p>
-                <button class="btn btn-primary btncolmob" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#modToggleExternalContent" aria-expanded="false"
-                    aria-controls="modToggleExternalContent">⯆</button>
+    <section class="beneficios">
+        <div class="container-fluid">
+            <div class="container">
+                <h3>As aulas apresentam:</h3>
+                <div class="container">
+                    <ul>
+                        <li>
+                            Exercícios suaves e eficazes;
+                        </li>
+                        <li>
+                            Poucas repetições de cada movimento;
+                        </li>
+                        <li>
+                            Grande repertório de exercícios;
+                        </li>
+                        <li>
+                            Aulas únicas, evitando monotonia;
+                        </li>
+                        <li>
+                            Uso de aparelhos e acessórios criados especialmente para os exercícios;
+                        </li>
+                        <li>
+                            Resultados rápidos e duradouros;
+                        </li>
+                        <li>
+                            Construção de uma postura correta e natural;
+                        </li>
+                        <li>
+                            Não há desgaste físico.
+                        </li>
+                    </ul>
+                </div>
+                <h3>Pilates para jovens</h3>
+                <p>Pilates é altamente recomendado aos adolescentes por estarem atravessando um período de crescimento rápido e intenso o que ocasiona desajustes posturais e encurtamentos musculares, muitas vezes acompanhados de dor. A prática do Pilates nesta fase funciona como um ótimo trabalho preventivo, estruturando a postura, estabilizando as curvas fisiológicas da coluna, evitando escolioses e cifoses muito comuns nesta idade e melhorando o alongamento geral.                </p>
+                <h3>Pilates na terceira idade</h3>
+                <p>A maioria das pessoas chega à Terceira Idade necessitando de cuidados especiais com a saúde. Profissionais altamente capacitados aplicam o método Pilates respeitando as possibilidades de cada praticante e, assim, obtém excelentes resultados no que diz respeito a equilíbrio, força, coordenação motora, flexibilidade, capacidade respiratória, disposição e aumento de auto-estima.</p>
+                <h3>Pilates para gestantes</h3>
+                <p>Inúmeros estudos científicos já comprovaram a importância da atividade física durante a gestação. Mas, vale lembrar que nem toda atividade é indicada. Neste período, a mulher requer atenção especial na elaboração de um plano de exercícios que fortaleça seu corpo, prevenindo dores decorrentes do progressivo ganho de peso e respeitando as limitações impostas pela gestação. Oferecemos atendimento personalizado para quem vive esta fase única da vida. Nós na Cintia Marski Pilates possuimos formação específica para atender de forma adequada às necessidades das gestantes.                </p>
+                <h3>Pilates na reabilitação</h3>
+                <p>Os exercícios do Método Pilates têm seus princípios baseados na cinesiologia e na biomecânica, o que proporciona uma execução segura, livre de compensação e restrita ao foco da lesão, ela se aplica tanto na fase aguda da dor, na qual se estabiliza a região lesionada, como na recuperação da musculatura ou da articulação afetada na fase da pós reabilitação. O ambiente e o trabalho oferecidos pela técnica Pilates facilitam a intervenção baseada nos princípios de assistência permitindo que a evolução da reabilitação seja mais rápida. A reabilitação, se for por indicação médica, deve ser realizada com um Fisioterapeuta capacidado. Após a fase “aguda” , o fortalecimento e manutenção do tônus muscular é da alçada de outro profissional, com o profissional do movimento (Educador Físico). As etapas normais são diagnóstico e tratamento (médico), que pode encaminhar para uma reabilitação fisioterápica e posteriormente para um fortalecimento com o profissional da Educação Física, ou ainda, já encaminhar diretamente para o fortalecimento muscular com o Educador Físico.                </p>
             </div>
-            <div class="collapse navbar-collapse listacollapse" id="modToggleExternalContent">
-                <ul class="list-group list-group-horizontal">
-                    <li class="list-group-item flex-fill lista">Fisioterapia</li>
-                    <li class="list-group-item flex-fill lista">Natação para Bebês</li>
-                    <li class="list-group-item flex-fill lista">Drenagem Linfática</li>
-                    <li class="list-group-item flex-fill lista">Hidroginástica</li>
-                </ul>
-                <ul class="list-group list-group-horizontal">
-                    <li class="list-group-item flex-fill lista">Hidroterapia</li>
-                    <li class="list-group-item flex-fill lista">RPG</li>
-                    <li class="list-group-item flex-fill lista">Acupuntura</li>
-                </ul>
-            </div>
+        </div>
     </section>
 
 
@@ -116,45 +128,19 @@
         <div class="images_p">
 
             <div class="container">
-                <p>Algumas Fotos da Clínica:</p>
-                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 picgrid">
-                    <div class="col"><img class="img-fluid rounded"
-                            src="../imagens/Foto-para-site-Aqua-Fisio-3-1-1024x576.jpg" alt=""></div>
-                    <div class="col"><img class="img-fluid rounded"
-                            src="../imagens/Foto-para-site-Aqua-Fisio-1-1-1024x576.jpg" alt=""></div>
-                    <div class="col"><img class="img-fluid rounded"
-                            src="../imagens/Foto-para-site-Aqua-Fisio-2-1-1024x576.jpg" alt=""></div>
-                    <div class="col"><img class="img-fluid rounded"
-                            src="../imagens/Foto-para-site-Aqua-Fisio-1024x576.jpg" alt=""></div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="convenios">
-        <div class="container-fluid">
-            <div class="container">
-                <div class="images_p">
-                    <p>Conheça os convênios que atendemos:</p>
-                    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 picgrid">
-                        <div class="col colop"><img class="img-fluid rounded" src="../imagens/convenios/1-300x300.png" alt="">
-                        </div>
-                        <div class="col colop"><img class="img-fluid rounded" src="../imagens/convenios/8-300x300.png" alt="">
-                        </div>
-                        <div class="col colop"><img class="img-fluid rounded" src="../imagens/convenios/7-300x300.png" alt="">
-                        </div>
-                        <div class="col colop"><img class="img-fluid rounded" src="../imagens/convenios/5-300x300.png" alt="">
-                        </div>
-                        <div class="col colop"><img class="img-fluid rounded" src="../imagens/convenios/6-300x300.png" alt="">
-                        </div>
-                        <div class="col colop"><img class="img-fluid rounded" src="../imagens/convenios/3-300x300.png" alt="">
-                        </div>
-                        <div class="col colop"><img class="img-fluid rounded" src="../imagens/convenios/4-300x300.png" alt="">
-                        </div>
-                        <div class="col colop"><img class="img-fluid rounded" src="../imagens/convenios/2-300x300.png" alt="">
-                        </div>
-
-
+                <p>Algumas fotos da piscina:</p>
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 picgrid">
+                    <div class="col"><img class="img-fluid rounded" src="../imagens/piscina/6-1-1024x768.jpg" alt="">
+                    </div>
+                    <div class="col"><img class="img-fluid rounded" src="../imagens/piscina/5-1-1024x768.jpg" alt="">
+                    </div>
+                    <div class="col"><img class="img-fluid rounded" src="../imagens/piscina/4-1-1024x768.jpg" alt="">
+                    </div>
+                    <div class="col"><img class="img-fluid rounded" src="../imagens/piscina/3-1-1024x768.jpg" alt="">
+                    </div>
+                    <div class="col"><img class="img-fluid rounded" src="../imagens/piscina/2-1-1024x768.jpg" alt="">
+                    </div>
+                    <div class="col"><img class="img-fluid rounded" src="../imagens/piscina/1-1-1024x768.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -179,7 +165,7 @@
                 <div class="mapasite col">
                     <p class="aweight">MAPA DO SITE</p>
                     <a class="acolor" href="../index.html">Home</a>
-                    <a class="acolor" href="../modalidades/musculacao.html">A Academia</a>
+                    <a class="acolor" href="../pages/academia.html">A Academia</a>
                     <a class="acolor" href="../pages/clinica.html">A Clínica</a>
                     <a class="acolor" href="../pages/promocoes.html">Promoções</a>
                     <a class="acolor" href="../pages/contatoendereco.html">Contato & Endereço</a>
