--- a/pages/promocoes.html
+++ b/pages/promocoes.html
@@ -74,42 +74,14 @@
     <main class="aacademia">
         <div class="container-fluid">
             <div class="container accont">
-                <h1>A Clínica – AquaFisio Fitness</h1>
+                <h1>Promoções – AquaFisio Fitness</h1>
 
-                <p>Oferecemos um espaço estruturado e planejado para realização de todos os tipos de tratamentos em
-                    Fisioterapia, Hidroterapia, Natação para Bebês, RPG, Drenagem Linfática, Acupuntura e
-                    Hidroginástica.</p>
-
-                <p>Tratamentos de reabilitação fisioterapêutica de contusões, pós fraturas, entorses, luxações, e por
-                    meio de equipamentos modernos proporcionar a analgesia no alívio da dor, tratamento do processo
-                    inflamatório e melhoria na circulação, alongamentos e fortalecimento muscular na busca de
-                    recuperação dos movimentos, e reequilíbrio muscular e postural.</p>
+                <p>Confira nossas promoções nesta página.</p>
             </div>
         </div>
     </main>
 
-    <section class="sec_modalidade">
-        <div class="container">
-            <div class="mod_container">
-                <p>NOSSOS TRATAMENTOS:</p>
-                <button class="btn btn-primary btncolmob" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#modToggleExternalContent" aria-expanded="false"
-                    aria-controls="modToggleExternalContent">⯆</button>
-            </div>
-            <div class="collapse navbar-collapse listacollapse" id="modToggleExternalContent">
-                <ul class="list-group list-group-horizontal">
-                    <li class="list-group-item flex-fill lista">Fisioterapia</li>
-                    <li class="list-group-item flex-fill lista">Natação para Bebês</li>
-                    <li class="list-group-item flex-fill lista">Drenagem Linfática</li>
-                    <li class="list-group-item flex-fill lista">Hidroginástica</li>
-                </ul>
-                <ul class="list-group list-group-horizontal">
-                    <li class="list-group-item flex-fill lista">Hidroterapia</li>
-                    <li class="list-group-item flex-fill lista">RPG</li>
-                    <li class="list-group-item flex-fill lista">Acupuntura</li>
-                </ul>
-            </div>
-    </section>
+
 
 
     <section class="images_container">
@@ -131,35 +103,7 @@
         </div>
     </section>
 
-    <section class="convenios">
-        <div class="container-fluid">
-            <div class="container">
-                <div class="images_p">
-                    <p>Conheça os convênios que atendemos:</p>
-                    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 picgrid">
-                        <div class="col colop"><img class="img-fluid rounded" src="../imagens/convenios/1-300x300.png" alt="">
-                        </div>
-                        <div class="col colop"><img class="img-fluid rounded" src="../imagens/convenios/8-300x300.png" alt="">
-                        </div>
-                        <div class="col colop"><img class="img-fluid rounded" src="../imagens/convenios/7-300x300.png" alt="">
-                        </div>
-                        <div class="col colop"><img class="img-fluid rounded" src="../imagens/convenios/5-300x300.png" alt="">
-                        </div>
-                        <div class="col colop"><img class="img-fluid rounded" src="../imagens/convenios/6-300x300.png" alt="">
-                        </div>
-                        <div class="col colop"><img class="img-fluid rounded" src="../imagens/convenios/3-300x300.png" alt="">
-                        </div>
-                        <div class="col colop"><img class="img-fluid rounded" src="../imagens/convenios/4-300x300.png" alt="">
-                        </div>
-                        <div class="col colop"><img class="img-fluid rounded" src="../imagens/convenios/2-300x300.png" alt="">
-                        </div>
 
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <section class="sec_contato">
         <div class="container-fluid cont_contato">
