--- a/modalidades/fitdance.html
+++ b/modalidades/fitdance.html
@@ -17,7 +17,7 @@
     <div class="container-fluid navbarcont">
         <nav class="navbar bg-light fixed-top">
             <div class="container">
-                <a class="navbar-brand logo" href="../index.html"><img src="../imagens/aqualogopequena.png" alt=""></a>
+                <a class="navbar-brand logo" href="../index.html"><img src="../svg/aqualogo.svg" alt="" style="width: 100px;"></a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
@@ -43,24 +43,24 @@
                                 <li><a class="dropdown-item" href="../modalidades/abdominal.html">Abdominal</a></li>
                                 <li><a class="dropdown-item" href="../modalidades/alongamento.html">Alongamento</a></li>
                                 <li><a class="dropdown-item" href="../modalidades/fitdance.html">FitDance</a></li>
-                                <li><a class="dropdown-item" href="#">GAP</a></li>
-                                <li><a class="dropdown-item" href="#">Ginástica</a></li>
-                                <li><a class="dropdown-item" href="#">Hidroginastica</a></li>
-                                <li><a class="dropdown-item" href="#">Hiit</a></li>
-                                <li><a class="dropdown-item" href="#">Muai Thay</a></li>
-                                <li><a class="dropdown-item" href="#">Pilates</a></li>
-                                <li><a class="dropdown-item" href="#">Ritmos para melhor idade</a></li>
-                                <li><a class="dropdown-item" href="#">Spinning</a></li>
-                                <li><a class="dropdown-item" href="#">Treino Funcional</a></li>
-                                <li><a class="dropdown-item" href="#">Yoga</a></li>
-                                <li><a class="dropdown-item" href="#">Karatê</a></li>
+                                <li><a class="dropdown-item" href="../modalidades/gap.html">GAP</a></li>
+                                <li><a class="dropdown-item" href="../modalidades/ginastica.html">Ginástica</a></li>
+                                <li><a class="dropdown-item" href="../modalidades/hidroginastica.html">Hidroginastica</a></li>
+                                <li><a class="dropdown-item" href="../modalidades/hiit.html">Hiit</a></li>
+                                <li><a class="dropdown-item" href="../modalidades/muaythai.html">Muay Thai</a></li>
+                                <li><a class="dropdown-item" href="../modalidades/pilates.html">Pilates</a></li>
+                                <li><a class="dropdown-item" href="../modalidades/ritmo.html">Ritmos para melhor idade</a></li>
+                                <li><a class="dropdown-item" href="../modalidades/spinning.html">Spinning</a></li>
+                                <li><a class="dropdown-item" href="../modalidades/funcional.html">Funcional</a></li>
+                                <li><a class="dropdown-item" href="../modalidades/yoga.html">Yoga</a></li>
+                                <li><a class="dropdown-item" href="../modalidades/karate.html">Karatê</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/clinica.html">A CLÍNICA</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">PROMOÇÕES</a>
+                            <a class="nav-link" href="../pages/promocoes.html">PROMOÇÕES</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/contatoendereco.html">CONTATO & ENDEREÇO</a>
@@ -132,7 +132,7 @@
                     <a class="acolor" href="../index.html">Home</a>
                     <a class="acolor" href="../pages/academia.html">A Academia</a>
                     <a class="acolor" href="../pages/clinica.html">A Clínica</a>
-                    <a class="acolor" href="#">Promoções</a>
+                    <a class="acolor" href="../pages/promocoes.html">Promoções</a>
                     <a class="acolor" href="../pages/contatoendereco.html">Contato & Endereço</a>
                 </div>
             </div>
